<resources>
    <string name="app_name">MiCRM_Module_3</string>
    <string name="t_lefono">Télefono</string>
    <string name="name">Nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="error_Name">Error en el Nombre</string>
    <string name="error_Tel">Error en el Télefono</string>
    <string name="error_email">Error en el E-mail</string>
    <string name="error_addres">Error en la Dirección</string>
    <string name="addres">Dirección</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="peoples">Personas</string>
    <string name="organizations">Organización</string>
    <string name="commerce">Negocio</string>
    <string name="activity">Actividades</string>
    <string name="value">Valor</string>
    <string name="status">Estado</string>
    <string name="_10_1_2016">10/1/2016</string>
    <string name="asignar_a">Asignar a</string>
    <string name="_10_20">10:20</string>
    <string name="createPeople">Crear Persona</string>
    <string name="createOrganization">Crear Organización</string>
    <string name="error_title">Error en el Titulo</string>
    <string name="error_description">Error en la descripción</string>
    <string name="error_date">Error en la fecha</string>
    <string name="error_status">Error en el status</string>
    <string name="error_value">Error en el valor</string>
    <string name="error_asign">Debe Seleccionar una persona o una Organización al menos</string>
    <string name="type">Tipo</string>
    <string name="Error_type">Error en el Tipo</string>
    <string name="error_hour">Error en la hora</string>
    <string name="home">Home</string>
    <string name="action_search">Search</string>
    <string name="date">Date</string>
    <string name="hour">Hora</string>
    <string name="duration">Duración</string>
    <string name="asignTo">Asignado a</string>
    <string name="twopoint">:</string>
    <string name="change">Cambiar</string>
    <string name="back">Regresar</string>
    <string name="componen">Lo componen</string>
    <string name="tel">Télefono</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome to me App Walter Alejandro Camaly</string>
    <string name="delete">Eliminar</string>

</resources>
